--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Nathaniel D. Phillips, PhD.</title>
+<title>Dominique Makowski, MSc.</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -299,16 +299,16 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Nathaniel D. Phillips, PhD.</h1>
+<h1 class="title toc-ignore">Dominique Makowski, MSc.</h1>
 
 </div>
 
 
 <p><img src="media/brooklyn%20(1%20of%201)-2.jpg" width="800px" style="display: block; margin: auto;" /></p>
-<p>You have reached the personal webpage of Nathaniel Phillips. If you’re looking to learn about my approach to statistical programming with R, decision making research, and open science, you’re in the right place!</p>
+<p>You have reached the personal webpage of Dominique Makowski. If you’re looking to learn about me, you’re in the right place! Otherwise, you can visit <a href="http://existentialcomics.com/">this</a> website that I like, mainly because it’s funny.</p>
 <p>I am a currently post-doctoral researcher in the department of <a href="https://psycho.unibas.ch/en/centers/abteilung-details/home/abteilung/economic-psychology/">Economic Psychology</a> at the University of Basel.</p>
 <p>To learn more about <a href="about.html">me</a>, my book <a href="piratesguide.html">YaRrr! The Pirate’s Guide to R</a>, <a href="tutorials.html">tutorials</a>, <a href="packages.html">R packages</a>, or to check out my <a href="https://ndphillips.github.io/blog/">blog</a>, click one of the buttons in the Navigation bar.</p>
-<p>You can also <a href="mailto:nathaniel.d.phillips.is@gmail.com" target="_top">send me an email</a>.</p>
+<p>You can also <a href="mailto:dom.makowski@gmail.com" target="_top">send me an email</a>.</p>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
