--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/brooklyn%20(1%20of%201)-2.jpg" width="800px" style="display: block; margin: auto;" /></p>
+<p><img src="media/budapest1.jpg" width="800px" style="display: block; margin: auto;" /></p>
 <p>You have reached the personal webpage of Dominique Makowski. If you’re looking to learn about me, you’re in the right place! Otherwise, you can visit <a href="http://existentialcomics.com/">this</a> website that I like, mainly because it’s funny.</p>
 <p>I am a currently post-doctoral researcher in the department of <a href="https://psycho.unibas.ch/en/centers/abteilung-details/home/abteilung/economic-psychology/">Economic Psychology</a> at the University of Basel.</p>
 <p>To learn more about <a href="about.html">me</a>, my book <a href="piratesguide.html">YaRrr! The Pirate’s Guide to R</a>, <a href="tutorials.html">tutorials</a>, <a href="packages.html">R packages</a>, or to check out my <a href="https://ndphillips.github.io/blog/">blog</a>, click one of the buttons in the Navigation bar.</p>
