--- a/cv.html
+++ b/cv.html
@@ -304,37 +304,13 @@ $(document).ready(function () {
 </div>
 
 
-<p>Here is my visual resume built using my <code>VisualResume</code> R package (see <a href="VisualResume.html">Visual Resume R Package</a>).</p>
-<p><img src="cv_files/figure-html/unnamed-chunk-1-1.png" width="1248" /></p>
 <div id="download" class="section level1">
 <h1>Download</h1>
 <p>You can download my resume and CV with the following links:</p>
 <ul>
-<li><a href="resume.pdf#" class="download" title="Download resume as PDF">Download Resume as PDF</a></li>
+<li><p><a href="DominiqueMakowski_CV.pdf#" class="download" title="Download resume as PDF">Download Resume as PDF</a></p></li>
+<li><p><a href="DominiqueMakowski_CV_fr.pdf#" class="download" title="Download resume (FRENCH) as PDF">Download Resume (FRENCH) as PDF</a></p></li>
 </ul>
-</div>
-<div id="publications" class="section level1">
-<h1>Publications</h1>
-<p>Phillips, N. D., Neth, H., Woike, J., &amp; Gaissmaier W. (<em>under review</em>). FFTrees: An R package to create, visualise, and use fast and frugal decision trees.</p>
-<p>Phillips, N. (2017). YaRrr! The pirate’s guide to R. <em>APS Observer, 30.3</em>. <a href="http://ndphillips.github.io/media/phillipsyarrr2017">PDF</a></p>
-<p>Hintze, A., Phillips, N. &amp; Hertwig, R. (2015). The Janus face of Darwinian competition. <em>Scientific Reports, 5. </em><a href="http://ndphillips.github.io/media/hintze2015janus.pdf">PDF</a></p>
-<p>Phillips, N. D.,Hertwig, R., Kareev, Y., &amp; Avrahami, J. (2014). Rivals in the dark: How competition influences search in decisions under uncertainty. <i>Cognition, 133(1), </i>104-119. <a href="http://ndphillips.github.io/media/phillips2014rivals.pdf">PDF</a></p>
-<p>González Vallejo, C., Cheng, J., Phillips, N. D., Chimeli, J., Bellezza, F., Harman, J., &amp; Lindberg, M. J. (2013). Early Positive Information Impacts Final Evaluations: No Deliberation‐Without‐Attention Effect and a Test of a Dynamic Judgment Model. <i>Journal of Behavioral Decision Making, 27(3)</i>, 209-225. <a href="http://ndphillips.github.io/media/gonzalez2013early.pdf">PDF</a></p>
-<p>González-Vallejo, C. &amp; Phillips, N. D. (2010). Predicting soccer matches: A reassessment of the benefit of unconscious thinking. <i>Judgment and Decision Making, 5(3), </i>200-206. <a href="http://ndphillips.github.io/media/gonzalez2010soccer.pdf">PDF</a></p>
-<p>Lassiter, G. D., Lindberg, M. J, Gonzalez-Vallejo, C., Bellezza, F. S., &amp; Phillips, N. D. (2009). The deliberation-without-attention effect: Evidence for an artifactual interpretation. <i>Psychological Science, 20(6)</i>, 671-675. <a href="http://ndphillips/github.io/media/lassiter2009deliberation.pdf">PDF</a></p>
-</div>
-<div id="workshops" class="section level1">
-<h1>Workshops</h1>
-<p>Phillips, N. (in prep). R: The solution to (almost) all of your life’s problems. Congress for psychology students (psyKo). Schuepfheim, Switzerland.</p>
-<p>Phillips, N. (2016). Creating R packages for research documentation. Early career judgment and decision making workshop, Basel, Switzerland. <a href="http://www.rpubs.com/ndphillips/rpackagescience">Link</a></p>
-</div>
-<div id="recent-presentations" class="section level1">
-<h1>Recent Presentations</h1>
-<p>Phillips, N. (2017). Simplify your life with R: From documenting and sharing data to modeling simple decision strategies. Department of Economics, Zuerich, Switzerland <a href="https://ndphillips.github.io/UZurich-6April2017/">HTML</a></p>
-<p>Phillips, N., Neth, H,. Woike, J., &amp; Gaissmaeier, W. (2017). FFTrees: An R package to create and visualise fast and frugal decision trees. BaselR, Basel, Switzerland <a href="http://ndphillips.github.io/BaselR">PDF</a></p>
-<p>Phillips, N., Neth, H,. Woike, J., &amp; Gaissmaeier, W. (2016). FFTrees: An R package to create and visualise fast and frugal decision trees. Annual meeting of the society for Judgment and Decision Making, Boston, MA. <a href="http://ndphillips.github.io/media/phillips2016BostonFFTrees.pdf">PDF</a></p>
-<p>Phillips, N., Neth, H., Gaissmaeier, W., Navarro, D., Newell, B. &amp; Rieskamp, J. (2016). Peeks and Keeps: Optional risk reinforcement learning. Annual meeting for the Deutschen Gesellschaft fuer Psychologie. Leipzig, Germany. <a href="http://ndphillips.github.io/media/phillips2016Leipzigpak.pdf">PDF</a></p>
-<p>Phillips, N., Neth, H., Gaissmaeier, W., Navarro, D., Newell, B. &amp; Rieskamp, J. (2016). Peeks and Keeps: Optional risk decisions from experience. Annual meeting for the Society for Mathematical Psychology, New Brunswick, NJ.</p>
 </div>
 
 
