--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/budapest1.jpg" width="800px" style="display: block; margin: auto;" /></p>
+<p><img src="media/coke.jpg" width="800px" style="display: block; margin: auto;" /></p>
 <p>You have reached the personal webpage of Dominique Makowski. If you’re looking to learn about me, you’re in the right place! Otherwise, you can visit <a href="http://existentialcomics.com/">this</a> website that I like, mainly because it’s funny.</p>
 <p>I am a currently PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cit'e.</p>
 <!-- <script> -->
