--- a/NeuroKit.py.html
+++ b/NeuroKit.py.html
@@ -11,7 +11,7 @@
 
 
 
-<title>YaRrr! The Pirate’s Guide to R</title>
+<title>FFTrees</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -208,16 +208,13 @@ $(document).ready(function () {
     </li>
     <li class="divider"></li>
     <li>
-      <a href="yarrr.html">yarrr</a>
+      <a href="Neuropsydia.py.html">Neuropsydia.py</a>
     </li>
     <li class="divider"></li>
     <li>
-      <a href="FFTrees.html">FFTrees</a>
+      <a href="NeuroKit.py.html">NeuroKit.py</a>
     </li>
     <li class="divider"></li>
-    <li>
-      <a href="VisualResume.html">VisualResume</a>
-    </li>
   </ul>
 </li>
 <li>
@@ -228,7 +225,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://ndphillips.github.io/blog/">
+  <a href="https://biblineuropsy.com/">
     <span class="fa fa-rss"></span>
      
     Blog
@@ -273,51 +270,46 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">YaRrr! The Pirate’s Guide to R</h1>
+<h1 class="title toc-ignore">FFTrees</h1>
 
 </div>
 
 
-<p style="text-align: center;">
-<a href="https://bookdown.org/ndphillips/YaRrr/"><img src="http://ndphillips.github.io/media/YaRrr_Cover.jpg" alt="YaRrr Cover 2.001" width="300" /></a>
-</p>
-<p style="text-align: center;">
-<a href="https://bookdown.org/ndphillips/YaRrr/">Click Here to Read YaRrr! The Pirate’s Guide to R</a>
-</p>
-<p><em>YaRrr! The Pirate’s Guide to R</em>, is an introductory e-book to the R programming language written for people with little to no programming experience.</p>
-<p>This whole story started in the summer of 2015. I was taking a late night swim on the Bodensee in Konstanz and saw a rusty object sticking out of the water. Upon digging it out, I realised it was an ancient usb-stick with the word YaRrr inscribed on the side. Intrigued, I brought it home and plugged it into my laptop. Inside the stick, I found a single pdf file written entirely in pirate. After watching several pirate movies (ok, maybe just the Goonies 10,000 times), I learned enough pirate to begin translating the text to English. Sure enough, the book turned out to be an introduction to R called <em>YaRrr! The Pirate’s Guide to R</em>.</p>
-<p>This book clearly has both massive historical and pedagogical significance. Most importantly, it turns out that pirates were programming in R well before the earliest known advent of computers. Of slightly less significance is that the book has turned out to be a surprisingly up-to-date and approachable introductory text to R. For both of these reasons, I felt it was my duty to share the book with the world.</p>
-<div id="view-or-download-the-book-for-free" class="section level2">
-<h2>View or download the book for free</h2>
-<p>I originally wrote the book in LaTeX for a traditional PDF output. This version works great for printing. However, it is difficult to update, and cannot be easily displayed online. For these reasons, I am in the process of converting the book to a web-friendly, HTML format using the fantastic <a href="https://bookdown.org">Bookdown</a> package. This version will continually be updated whie the original LaTeX version will (most likely) not.</p>
-<table>
-<thead>
-<tr class="header">
-<th align="right">Version</th>
-<th align="right">In development?</th>
-<th align="left">GitHub Link</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="right"><a href="https://bookdown.org/ndphillips/YaRrr/">Online Book Link</a></td>
-<td align="right">Yes!</td>
-<td align="left"><a href="https://github.com/ndphillips/ThePiratesGuideToR" class="uri">https://github.com/ndphillips/ThePiratesGuideToR</a></td>
-</tr>
-<tr class="even">
-<td align="right"><a href="https://drive.google.com/file/d/0B4udF24Yxab0S1hnZlBBTmgzM3M/view?usp=sharing">PDF Book Link</a></td>
-<td align="right">No</td>
-<td align="left">-</td>
-</tr>
-</tbody>
-</table>
+<p>The <code>FFTrees</code> package creates fast and frugal decision trees (FFTs). Fast and frugal decision trees are very simple <a href="https://en.wikipedia.org/wiki/Heuristic">heuristics</a> decision algorithms that, in contrast to regression and more complex algorithms such as <a href="https://en.wikipedia.org/wiki/Random_forest">random forests</a> and (non-frugal) <a href="https://en.wikipedia.org/wiki/Decision_tree">decision trees</a>, allow people to make fast decisions based on minimal information. FFTs are not just easy to use, they can also predict data as well, if not better, than more complex algorithms such as regression <span class="citation">(Gigerenzer and Todd 1999; Martignon, Katsikopoulos, and Woike 2008)</span>. Because they are so effective and easy to use and, fast and frugal trees have been used to improve decision making in medical <span class="citation">(Green and Mehr 1997; Jenny et al. 2013)</span> and financial <span class="citation">(Neth et al. 2014)</span> contexts.</p>
+<p>The purpose of <code>FFTrees</code> is to allow anyone to quickly and easily generate, visualise, and use FFTs for their own data.</p>
+<pre class="r"><code>install.packages(&quot;FFTrees&quot;)
+# devtools::install_github(&quot;ndphillips/FFTrees&quot;, build_vignettes = TRUE) # developer version</code></pre>
+<pre class="r"><code>library(FFTrees)
+
+set.seed(100) # For cross validation replication
+heart.fft &lt;- FFTrees(formula = diagnosis ~.,        # formula
+                     data = heartdisease,           # dataframe
+                     train.p = .5)                  # cross validation split
+
+plot(heart.fft,                                     # FFTrees object
+     main = &quot;Heart Disease&quot;,                        # Plot title
+     decision.names = c(&quot;Healthy&quot;, &quot;Diseased&quot;),     # Decision names
+     data = &quot;test&quot;)                                 # Show statistics for test data</code></pre>
+<p><img src="NeuroKit.py_files/figure-html/unnamed-chunk-2-1.png" width="768" /></p>
+<div id="references" class="section level1 unnumbered">
+<h1>References</h1>
+<div id="refs" class="references">
+<div id="ref-gigerenzer1999simple">
+<p>Gigerenzer, Gerd, and Peter M Todd. 1999. <em>Simple Heuristics That Make Us Smart</em>. Oxford University Press, USA.</p>
 </div>
-<div id="support-yarrr-with-a-donation" class="section level2">
-<h2>Support YaRrr! with a donation!</h2>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input name="cmd" type="hidden" value="_s-xclick" /><input name="hosted_button_id" type="hidden" value="NWE3NP9LHDQ6J" /><input alt="PayPal - The safer, easier way to pay online!" name="submit" src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/silver-pill-paypal-34px.png" type="image" /><img src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" alt="" width="1" height="1" border="0" />
-</form>
-<p>I am a huge proponent of open source software (like R) and open science. So a version of this book will always be freely available! That said translating and updating the book takes quite a bit of time. So if you like the book, and want to see it get even better with more pirate-speak and terrible jokes, consider throwing some gold my way by clicking the donation button!</p>
+<div id="ref-green1997alters">
+<p>Green, Lee, and David R Mehr. 1997. “What Alters Physicians’ Decisions to Admit to the Coronary Care Unit?” <em>Journal of Family Practice</em> 45 (3). [New York, Appleton-Century-Crofts]: 219–26.</p>
+</div>
+<div id="ref-jenny2013simple">
+<p>Jenny, Mirjam A, Thorsten Pachur, S Lloyd Williams, Eni Becker, and Jürgen Margraf. 2013. “Simple Rules for Detecting Depression.” <em>Journal of Applied Research in Memory and Cognition</em> 2 (3). Elsevier: 149–57.</p>
+</div>
+<div id="ref-martignon2008categorization">
+<p>Martignon, Laura, Konstantinos V Katsikopoulos, and Jan K Woike. 2008. “Categorization with Limited Resources: A Family of Simple Heuristics.” <em>Journal of Mathematical Psychology</em> 52 (6). Elsevier: 352–61.</p>
+</div>
+<div id="ref-neth2014homo">
+<p>Neth, Hansjörg, Björn Meder, Amit Kothiyal, and Gerd Gigerenzer. 2014. “Homo Heuristicus in the Financial World: From Risk Management to Managing Uncertainty.” <em>Journal of Risk Management in Financial Institutions</em> 7 (2). Henry Stewart Publications: 134–44.</p>
+</div>
+</div>
 </div>
 
 
