--- a/ShinyBandit.html
+++ b/ShinyBandit.html
@@ -208,16 +208,13 @@ $(document).ready(function () {
     </li>
     <li class="divider"></li>
     <li>
-      <a href="yarrr.html">yarrr</a>
+      <a href="Neuropsydia.py.html">Neuropsydia.py</a>
     </li>
     <li class="divider"></li>
     <li>
-      <a href="FFTrees.html">FFTrees</a>
+      <a href="NeuroKit.py.html">NeuroKit.py</a>
     </li>
     <li class="divider"></li>
-    <li>
-      <a href="VisualResume.html">VisualResume</a>
-    </li>
   </ul>
 </li>
 <li>
@@ -228,7 +225,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://ndphillips.github.io/blog/">
+  <a href="https://biblineuropsy.com/">
     <span class="fa fa-rss"></span>
      
     Blog
