--- a/about.html
+++ b/about.html
@@ -208,16 +208,13 @@ $(document).ready(function () {
     </li>
     <li class="divider"></li>
     <li>
-      <a href="yarrr.html">yarrr</a>
+      <a href="Neuropsydia.py.html">Neuropsydia.py</a>
     </li>
     <li class="divider"></li>
     <li>
-      <a href="FFTrees.html">FFTrees</a>
+      <a href="NeuroKit.py.html">NeuroKit.py</a>
     </li>
     <li class="divider"></li>
-    <li>
-      <a href="VisualResume.html">VisualResume</a>
-    </li>
   </ul>
 </li>
 <li>
@@ -228,7 +225,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://ndphillips.github.io/blog/">
+  <a href="https://biblineuropsy.com/">
     <span class="fa fa-rss"></span>
      
     Blog
@@ -286,6 +283,15 @@ $(document).ready(function () {
 <li><p><a target="_blank" href="DominiqueMakowski_CV.pdf#" class="download" title="English">English</a></p></li>
 <li><p><a target="_blank" href="DominiqueMakowski_CV_fr.pdf#" class="download" title="French">French</a></p></li>
 </ul>
+<p><span class="citation">(Surowiecki 2005)</span></p>
+</div>
+<div id="references" class="section level1 unnumbered">
+<h1>References</h1>
+<div id="refs" class="references">
+<div id="ref-surowiecki2005wisdom">
+<p>Surowiecki, James. 2005. <em>The Wisdom of Crowds</em>. Anchor.</p>
+</div>
+</div>
 </div>
 
 
