--- a/about.html
+++ b/about.html
@@ -275,7 +275,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/cambodia.jpg" width="500px" style="display: block; margin: auto;" /></p>
+<p><img src="media/Profile.jpg" width="500px" style="display: block; margin: auto;" /></p>
 <div id="resume-cv" class="section level1">
 <h1>Resume / CV</h1>
 <p>You can download my full CV with the following links:</p>
@@ -283,15 +283,6 @@ $(document).ready(function () {
 <li><p><a target="_blank" href="DominiqueMakowski_CV.pdf#" class="download" title="English">English</a></p></li>
 <li><p><a target="_blank" href="DominiqueMakowski_CV_fr.pdf#" class="download" title="French">French</a></p></li>
 </ul>
-<p><span class="citation">(Surowiecki 2005)</span></p>
-</div>
-<div id="references" class="section level1 unnumbered">
-<h1>References</h1>
-<div id="refs" class="references">
-<div id="ref-surowiecki2005wisdom">
-<p>Surowiecki, James. 2005. <em>The Wisdom of Crowds</em>. Anchor.</p>
-</div>
-</div>
 </div>
 
 
