--- a/research.html
+++ b/research.html
@@ -276,63 +276,10 @@ $(document).ready(function () {
 
 
 <p><em>Note: This page is under construction!</em></p>
-<p><img src="media/corkboard3.png" width="1000px" style="display: block; margin: auto;" /></p>
-<div id="unconscious-decision-making" class="section level3">
-<h3>Unconscious decision making</h3>
-<p>If you have to make a difficult decision, should you think carefully, or sleep on it and let your unconscious mind do the work? An intriguing theory called Unconscious Thought Theory (UTT) suggests that, indeed, you should let your unconscious mind do the work. The theory suggests that when you distract yourself from a difficult decision, your unconscious mind will process all the information necessary to make the decision and then reveal the best choice. We tested the predictions of this theory in several papers and find poor support for the theory. In <em>The delibaration-without-attention effect evidence for an artifactual interpretation</em> <span class="citation">(Lassiter et al. 2009)</span>, we find that previous resarch showing a benefit to `unconscious thought’ may not have been due to unconscious processing at all. We make the same conclusions in two additional papers <span class="citation">(González-Vallejo and Phillips 2010; González Vallejo et al. 2014)</span>.</p>
-</div>
-<div id="wisdom-of-crowds-within-one-mind-inner-crowd" class="section level3">
-<h3>Wisdom of crowds within one mind: “Inner Crowd”</h3>
-<p>How can people make better judgments and decisions? One way is to combine estimates from a large group of diverse people. We know from extensive research that the average judgment from a crowd can be incredibly accurate – even more so than the most accurate individual person. This phenomenon is known as the <em>wisdom of crowds</em> <span class="citation">(Surowiecki 2005)</span>. However, relying on a crowd is not very practical in most real world decisions as it would require people to take a massive survey every time they want to make a decision. But can a person benefit from a wisdom of crowds within one mind – an “inner-crowd”? Indeed, recent research has shown they can <span class="citation">(Vul and Pashler 2008; Herzog and Hertwig 2009)</span>. In <em>Improving Bayesian reasoning with the inner-crowd</em> <span class="citation">(Phillips, Herzog, and Hertwig 2014)</span> we explore how people can use an inner-crowd to improve judgments in Bayesian reasoning tasks. In <em>Utilizing confidence in the inner-crowd</em> <span class="citation">(Phillips et al. 2014b)</span>, we show how people can use confidence in their estimates to boost the benefits of their inner-crowd.</p>
-</div>
-<div id="competition-and-decisions-under-uncertainty" class="section level3">
-<h3>Competition and decisions under uncertainty</h3>
-<p>How should you change your decision making process when you are competing with other people in a complex, uncertain environment? In <em>Rivals in the dark: How competition influences decisions under uncertainty</em> <span class="citation">(Phillips et al. 2014a)</span> we introduce a new experimental paradigm called the <em>Competitive Sampling Game (CSG)</em> to measure the effects of competition on information search. Using the paradigm, we find that competition causes people to <em>dramatically</em> reduce their pre-decisional information search. In other words, when people, or organisations, compete with each other for finite resources, they will make decisions on much less data than if they did not compete. The reason for this is that people want to ‘beat others to the punch’ while having the fear of ‘missing out.’ While this is rational for people to do in relatively predictable environments, our paper shows how it can lead to disasterous outcomes in unpredictable environments such as those with rare but extreme negative events. For example, it explains how pharmeceudical companies under fierce competition are, without external regulation, prone to releasing drugs without due dilligence to check for rare but extreme side-effects.</p>
-</div>
-<div id="fast-and-frugal-decision-trees-ffts" class="section level3">
-<h3>Fast and frugal decision trees (FFTs)</h3>
-<div id="presentations" class="section level4">
-<h4>Presentations</h4>
-<ul>
-<li><a href="https://ndphillips.github.io/BaselR/">BaselR, 7 March 2017</a></li>
-</ul>
-<p>Fast and frugal decision trees (FFTs) are simple decision algorithms that allow people to make efficient and effective classification decisions based on limited information. But despite their successful use in many applied domains, there is no widely available tool that allows anyone to easily create FFTs from data. We fill this gap by introducing the R package FFTrees. FFTrees allows anyone to create, visualize, and use FFTs from data with minimal programming. In this paper, we explain how FFTs work and provide a 5 step tutorial for using the FFTrees package to create them. We then conduct a simulation across a variety of real-world datasets to test how well FFTs created by FFTrees can predict data relative to popular prediction algorithms. Results show that FFTs created by FFTrees can predict data as well as the best of these algorithms while remaining simple enough for anyone to understand and use.</p>
-</div>
-</div>
-<div id="optional-risk-decisions-from-experience" class="section level3">
-<h3>Optional risk decisions from experience</h3>
-</div>
-<div id="references" class="section level1 unnumbered">
-<h1>References</h1>
-<div id="refs" class="references">
-<div id="ref-gonzalez2014early">
-<p>González Vallejo, Claudia, Jiuqing Cheng, Nathaniel Phillips, Janna Chimeli, Francis Bellezza, Jason Harman, G Daniel Lassiter, and Matthew J Lindberg. 2014. “Early Positive Information Impacts Final Evaluations: No Deliberation-Without-Attention Effect and a Test of a Dynamic Judgment Model.” <em>Journal of Behavioral Decision Making</em> 27 (3). Wiley Online Library: 209–25.</p>
-</div>
-<div id="ref-gonzalez2010predicting">
-<p>González-Vallejo, Claudia, and Nathaniel Phillips. 2010. “Predicting Soccer Matches: A Reassessment of the Benefit of Unconscious Thinking.” <em>Judgment and Decision Making</em> 5 (3). Society for Judgment &amp; Decision Making: 200.</p>
-</div>
-<div id="ref-herzog2009wisdom">
-<p>Herzog, Stefan M, and Ralph Hertwig. 2009. “The Wisdom of Many in One Mind Improving Individual Judgments with Dialectical Bootstrapping.” <em>Psychological Science</em> 20 (2). SAGE Publications: 231–37.</p>
-</div>
-<div id="ref-lassiter2009deliberation">
-<p>Lassiter, G Daniel, Matthew J Lindberg, Claudia González-Vallejo, Francis S Bellezza, and Nathaniel D Phillips. 2009. “The Deliberation-Without-Attention Effect Evidence for an Artifactual Interpretation.” <em>Psychological Science</em> 20 (6). SAGE Publications: 671–75.</p>
-</div>
-<div id="ref-phillips2014rivals">
-<p>Phillips, Nathaniel D, Ralph Hertwig, Yaakov Kareev, and Judith Avrahami. 2014a. “Rivals in the Dark: How Competition Influences Search in Decisions Under Uncertainty.” <em>Cognition</em> 133 (1). Elsevier: 104–19.</p>
-</div>
-<div id="ref-phillips2016bayesian">
-<p>Phillips, Nathaniel, Stefan Herzog, and Ralph Hertwig. 2014. “Improving Bayesian Reasoning with the Inner-Crowd.” University of Basel.</p>
-</div>
-<div id="ref-phillips2016confidence">
-<p>Phillips, Nathaniel, Stefan Herzog, Julianne Kammer, and Ralph Hertwig. 2014b. “Utilizing Confidence in the Inner-Crowd.” University of Basel.</p>
-</div>
-<div id="ref-surowiecki2005wisdom">
-<p>Surowiecki, James. 2005. <em>The Wisdom of Crowds</em>. Anchor.</p>
-</div>
-<div id="ref-vul2008measuring">
-<p>Vul, Edward, and Harold Pashler. 2008. “Measuring the Crowd Within Probabilistic Representations Within Individuals.” <em>Psychological Science</em> 19 (7). SAGE Publications: 645–47.</p>
-</div>
-</div>
+<p><img src="media/braincloud.png" width="1000px" style="display: block; margin: auto;" /></p>
+<div id="research-topics" class="section level3">
+<h3>Research Topics</h3>
+<p>In 1896, the Lumi</p>
 </div>
 
 
