--- a/index.html
+++ b/index.html
@@ -275,17 +275,9 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/coke.jpg" width="800px" style="display: block; margin: auto;" /></p>
-<p>You have reached the personal webpage of Dominique Makowski. If you’re looking to learn about me, you’re in the right place! Otherwise, you can visit <a href="http://existentialcomics.com/">this</a> website that I like, mainly because it’s funny.</p>
-<p>I am a currently PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cit'e.</p>
-<!-- <script> -->
-<!--   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ -->
-<!--   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), -->
-<!--   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) -->
-<!--   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); -->
-<!--   ga('create', 'UA-89596306-1', 'auto'); -->
-<!--   ga('send', 'pageview'); -->
-<!-- </script> -->
+<p><img src="media/playa.jpg" width="800px" style="display: block; margin: auto;" /></p>
+<p>You have reached the personal webpage of Dominique Makowski. If you’re looking to learn about me, you’re in the right place! Otherwise, you can visit <a href="http://existentialcomics.com/">this</a> website, mainly because it’s funny.</p>
+<p>I am a currently PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cit</p>
 
 
 
