--- a/packages.html
+++ b/packages.html
@@ -275,14 +275,13 @@ $(document).ready(function () {
 </div>
 
 
-<p>Here is a list of my R packages available either on CRAN or GitHub:</p>
+<p>Here is a list of my packages:</p>
 <table>
 <colgroup>
-<col width="11%" />
-<col width="47%" />
-<col width="24%" />
+<col width="12%" />
+<col width="50%" />
+<col width="26%" />
 <col width="10%" />
-<col width="6%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -290,30 +289,26 @@ $(document).ready(function () {
 <th>Description</th>
 <th>Package Guide</th>
 <th>Source Code</th>
-<th>R Installation</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td><a href="yarrr.html">yarrr</a></td>
-<td>Mixture of datasets, functions, and tutorials accompanying <em>YaRrr! The Pirate’s Guide to R</em></td>
-<td><a href="https://cran.r-project.org/web/packages/yarrr/vignettes/guide.html">yarrr Guide</a></td>
-<td><a href="http://www.github.com/ndphillips/yarrr">www.github.com/ndphillips/yarrr</a></td>
-<td><code>install.packages(&quot;yarrr&quot;)</code></td>
+<td><a href="neuropsychology.R" class="uri">neuropsychology.R</a></td>
+<td>An R Toolbox for Psychologists, Neuropsychologists and Neuroscientists.</td>
+<td><a href="https://www.rdocumentation.org/packages/neuropsychology/">Documentation</a></td>
+<td><a href="https://github.com/neuropsychology/neuropsychology.R" class="uri">https://github.com/neuropsychology/neuropsychology.R</a></td>
 </tr>
 <tr class="even">
-<td><a href="FFTrees.html">FFTrees</a></td>
-<td>Create, visualise, and impliment fast and frugal decision trees</td>
-<td><a href="https://cran.r-project.org/web/packages/FFTrees/vignettes/guide.html">FFTrees Guide</a></td>
-<td><a href="http://www.github.com/ndphillips/FFTrees">www.github.com/ndphillips/FFTrees</a></td>
-<td><code>install.packages(&quot;FFTrees&quot;)</code></td>
+<td><a href="Neuropsydia.py" class="uri">Neuropsydia.py</a></td>
+<td>A Python Module for Creating Experiments, Tasks and Questionnaires.</td>
+<td><a href="http://neuropsydia.readthedocs.io/en/latest/%5D">Documentation / Guide</a></td>
+<td><a href="https://github.com/neuropsychology/Neuropsydia.py" class="uri">https://github.com/neuropsychology/Neuropsydia.py</a></td>
 </tr>
 <tr class="odd">
-<td><a href="VisualResume.html">VisualResume</a></td>
-<td>Create a visual resume</td>
-<td>COming soon…</td>
-<td><a href="http://www.github.com/ndphillips/VisualResume">www.github.com/ndphillips/VisualResume</a></td>
-<td><code>devtools::install_github(&quot;ndphillips/VisualResume&quot;)</code></td>
+<td><a href="NeuroKit.py" class="uri">NeuroKit.py</a></td>
+<td>A Python Toolbox for Statistics and Neurophysiological Signal Processing (EEG, EDA, ECG, EMG…).</td>
+<td><a href="http://neurokit.readthedocs.io/en/latest/index.html">Documentation / Guide</a></td>
+<td><a href="https://github.com/neuropsychology/NeuroKit.py" class="uri">https://github.com/neuropsychology/NeuroKit.py</a></td>
 </tr>
 </tbody>
 </table>
