--- a/tutorials.html
+++ b/tutorials.html
@@ -275,8 +275,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="r" class="section level2">
-<h2>R</h2>
+<div id="neuroimaging" class="section level2">
+<h2>Neuroimaging</h2>
 <table style="width:94%;">
 <colgroup>
 <col width="43%" />
@@ -290,23 +290,19 @@ $(document).ready(function () {
 </thead>
 <tbody>
 <tr class="odd">
-<td><a href="http://rpubs.com/YaRrr/markdownbasics">R Markdown</a></td>
-<td>Writing dynamic documents with R Markdown</td>
+<td><a href="http://neurokit.readthedocs.io/en/latest/tutorials/Bio.html">Biosignals processing in Python</a></td>
+<td>Process biosignals, such as electrodermal (EDA), cardiac (ECG), respiratory (RSP) or muscular (EMG) data with Python and NeuroKit.</td>
 </tr>
 <tr class="even">
-<td><a href="http://rpubs.com/ndphillips/rpackagescience">Writing R packages for research documentation</a></td>
-<td>Document your research, including raw data, documentation, analyses, and tutorials using a custom R package that anyone can easily install and use</td>
+<td><a href="http://neurokit.readthedocs.io/en/latest/tutorials/EEG.html">EEG</a></td>
+<td>EEG and MEG processing using Python and NeuroKit (currently under developpment).</td>
 </tr>
 </tbody>
 </table>
 </div>
-<div id="statistical-programming" class="section level2">
-<h2>Statistical Programming</h2>
-<table style="width:97%;">
-<colgroup>
-<col width="43%" />
-<col width="54%" />
-</colgroup>
+<div id="statistics" class="section level2">
+<h2>Statistics</h2>
+<table>
 <thead>
 <tr class="header">
 <th>Link</th>
@@ -315,40 +311,11 @@ $(document).ready(function () {
 </thead>
 <tbody>
 <tr class="odd">
-<td><a href="http://rpubs.com/YaRrr/MLTutorial">Maximum Likelihood parameter estimation with R</a></td>
-<td>Calculating maximum likelihood parameter estimates in R using a probabilistic model of choice from <span class="citation">Gonzalez-Vallejo (2002)</span></td>
+<td><a href="http://rpubs.com/YaRrr/MLTutorial">To Do</a></td>
+<td>The basics of R for psychology and neuroscience.</td>
 </tr>
 </tbody>
 </table>
-</div>
-<div id="miscellaneous" class="section level2">
-<h2>Miscellaneous</h2>
-<table style="width:97%;">
-<colgroup>
-<col width="43%" />
-<col width="54%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>Link</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><a href="http://rpubs.com/YaRrr/apalatex">Writing APA papers in LaTeX with ShareLaTeX</a></td>
-<td>Write APA style papers with ease using LaTeX</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div id="references" class="section level1 unnumbered">
-<h1>References</h1>
-<div id="refs" class="references">
-<div id="ref-gonzalez2002making">
-<p>Gonzalez-Vallejo, Claudia. 2002. “Making Trade-Offs: A Probabilistic and Context-Sensitive Model of Choice Behavior.” <em>Psychological Review</em> 109 (1). American Psychological Association: 137.</p>
-</div>
-</div>
 </div>
 
 
