--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@ $(document).ready(function () {
       <ul class="nav navbar-nav">
         <li>
   <a href="about.html">
-    <span class="fa fa-user-circle"></span>
+    <span class="fa fa-user"></span>
      
      About
   </a>
@@ -275,7 +275,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/Profile.png" width="200px" style="display: block; margin: auto;" /></p>
+<p><img src="media/tree.jpg" width="500px" style="display: block; margin: auto;" /></p>
 <div id="resume-cv" class="section level1">
 <h1>Resume / CV</h1>
 <p>You can download my full CV with the following links:</p>
