--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ $(document).ready(function () {
       <ul class="nav navbar-nav">
         <li>
   <a href="about.html">
-    <span class="fa fa-user-circle"></span>
+    <span class="fa fa-user"></span>
      
      About
   </a>
@@ -275,7 +275,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/playa.jpg" width="1000px" style="display: block; margin: auto;" /></p>
+<p><img src="media/cambodia.JPG" width="1000px" style="display: block; margin: auto;" /></p>
 <p>You have reached the personal webpage of Dominique Makowski. If you’re looking to learn about me, you’re in the right place! Otherwise, you can visit <a href="http://existentialcomics.com/">this</a> website, mainly because it’s funny.</p>
 <p>I am a currently PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cité.</p>
 <script>
