--- a/research.html
+++ b/research.html
@@ -178,7 +178,7 @@ $(document).ready(function () {
       <ul class="nav navbar-nav">
         <li>
   <a href="about.html">
-    <span class="fa fa-user-circle"></span>
+    <span class="fa fa-user"></span>
      
      About
   </a>
