--- a/Neuropsydia.py.html
+++ b/Neuropsydia.py.html
@@ -11,7 +11,7 @@
 
 
 
-<title>yarrr</title>
+<title>Neuropsydia.py</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -270,23 +270,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">yarrr</h1>
+<h1 class="title toc-ignore">Neuropsydia.py</h1>
 
 </div>
 
 
-<p>The <code>yarrr</code> package contains a mixture of functions and datasets that support my e-book <a href="http://www.thepiratesguidetor.com">YaRrr! The pirate’s guide to R</a>. The most notable function in the package is <code>pirateplot()</code>. A pirateplot shows the relationship between a categorical independent variable and a numeric dependent variable. However, in contrast to notoriously deceptive barplots, a pirateplot reveals patterns in data by showing Raw data (as points), Descriptive statistics (as lines and/or bars), and Inferential statistics (as bands).</p>
-<p><img src="Neuropsydia.py_files/figure-html/unnamed-chunk-1-1.png" width="576" style="display: block; margin: auto;" /></p>
-<p>You can install the most stable version of <code>yarrr</code> from CRAN, or the latest developer version from GitHub as follows:</p>
-<pre class="r"><code>install.packages(&quot;yarrr&quot;)
-# devtools::install_github(&quot;ndphillips/yarrr&quot;, build_vignettes = TRUE) # developer version</code></pre>
-<p>Here is an example of a pirateplot showing the relationship between the age and weight of chickens:</p>
-<pre class="r"><code># Create a pirateplot from the ChickWeight data
-yarrr::pirateplot(formula = weight ~ Time,
-                  data = ChickWeight,
-                  main = &quot;A Pirateplot of chicken weights by time&quot;)</code></pre>
-<p><img src="Neuropsydia.py_files/figure-html/unnamed-chunk-3-1.png" width="768" style="display: block; margin: auto;" /></p>
-<p>The <code>pirateplot()</code> function contains many arguments that allow you to easily customise the look of the plot, from the colors, to the element transparencies. To learn more, look at the <code>pirateplot()</code> vignette <a href="https://cran.r-project.org/web/packages/yarrr/vignettes/pirateplot.html">on CRAN</a>.</p>
+<p>A Python Module for Creating Experiments, Tasks and Questionnaires.</p>
 
 
 
