--- a/packages.html
+++ b/packages.html
@@ -275,7 +275,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Here is a list of my packages:</p>
+<p>Here is a list of my packages.</p>
 <table>
 <colgroup>
 <col width="12%" />
@@ -301,13 +301,13 @@ $(document).ready(function () {
 <tr class="even">
 <td><a href="Neuropsydia.py" class="uri">Neuropsydia.py</a></td>
 <td>A Python Module for Creating Experiments, Tasks and Questionnaires.</td>
-<td><a href="http://neuropsydia.readthedocs.io/en/latest/%5D">Documentation / Guide</a></td>
+<td><a href="http://neuropsydia.readthedocs.io/%5D">Documentation / Guide</a></td>
 <td><a href="https://github.com/neuropsychology/Neuropsydia.py" class="uri">https://github.com/neuropsychology/Neuropsydia.py</a></td>
 </tr>
 <tr class="odd">
 <td><a href="NeuroKit.py" class="uri">NeuroKit.py</a></td>
 <td>A Python Toolbox for Statistics and Neurophysiological Signal Processing (EEG, EDA, ECG, EMG…).</td>
-<td><a href="http://neurokit.readthedocs.io/en/latest/index.html">Documentation / Guide</a></td>
+<td><a href="http://neurokit.readthedocs.io/">Documentation / Guide</a></td>
 <td><a href="https://github.com/neuropsychology/NeuroKit.py" class="uri">https://github.com/neuropsychology/NeuroKit.py</a></td>
 </tr>
 </tbody>
