--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="about.html">
     <span class="fa fa-user"></span>
      
-     About
+     About / CV
   </a>
 </li>
 <li>
