--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ $(document).ready(function () {
 
 <p><img src="media/angkor.jpg" width="1000" style="display: block; margin: auto;" /></p>
 <p>You have reached my personal webpage. If you’re looking to learn about me, you’re in the right place! Otherwise, you can visit <a href="http://existentialcomics.com/">this</a> website, mainly because it’s funny.</p>
-<p>I am currently a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cité.</p>
+<p>I’m currently a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cité.</p>
 <p><em>PS: I made this website using R.</em></p>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
