--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@ $(document).ready(function () {
 
 
 <p><img src="media/snow.jpg" width="700px" style="display: block; margin: auto;" /></p>
-<p>I’m a neuropsychologist, psychotherapist, pizza lover, living currently in Paris, France.</p>
+<p>I’m a neuropsychologist, psychotherapist, pizza lover, currently living in Paris, France.</p>
 <div id="resume-cv" class="section level1">
 <h1>Resume / CV</h1>
 <p>You can download my full CV with the following links:</p>
