--- a/courses.html
+++ b/courses.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Tutorials</title>
+<title>Courses / Trainings</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -218,10 +218,10 @@ $(document).ready(function () {
   </ul>
 </li>
 <li>
-  <a href="tutorials.html">
+  <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
      
-    Tutorials
+    Courses / Trainings
   </a>
 </li>
 <li>
@@ -270,7 +270,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Tutorials</h1>
+<h1 class="title toc-ignore">Courses / Trainings</h1>
 
 </div>
 
