--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@ $(document).ready(function () {
   </ul>
 </li>
 <li>
-  <a href="tutorials.html">
+  <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
      
-    Tutorials
+    Courses / Trainings
   </a>
 </li>
 <li>
