--- a/about.html
+++ b/about.html
@@ -190,33 +190,7 @@ $(document).ready(function () {
      Research
   </a>
 </li>
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    <span class="fa fa-dropbox"></span>
-     
-     Packages
-     
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu" role="menu">
-    <li>
-      <a href="packages.html">Overview</a>
-    </li>
-    <li class="divider"></li>
-    <li>
-      <a href="neuropsychology.R.html">neuropsychology.R</a>
-    </li>
-    <li class="divider"></li>
-    <li>
-      <a href="Neuropsydia.py.html">Neuropsydia.py</a>
-    </li>
-    <li class="divider"></li>
-    <li>
-      <a href="NeuroKit.py.html">NeuroKit.py</a>
-    </li>
-    <li class="divider"></li>
-  </ul>
-</li>
+<li class="dropdown-header"> Packages</li>
 <li>
   <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
