--- a/index.html
+++ b/index.html
@@ -190,33 +190,7 @@ $(document).ready(function () {
      Research
   </a>
 </li>
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    <span class="fa fa-dropbox"></span>
-     
-     Packages
-     
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu" role="menu">
-    <li>
-      <a href="packages.html">Overview</a>
-    </li>
-    <li class="divider"></li>
-    <li>
-      <a href="neuropsychology.R.html">neuropsychology.R</a>
-    </li>
-    <li class="divider"></li>
-    <li>
-      <a href="Neuropsydia.py.html">Neuropsydia.py</a>
-    </li>
-    <li class="divider"></li>
-    <li>
-      <a href="NeuroKit.py.html">NeuroKit.py</a>
-    </li>
-    <li class="divider"></li>
-  </ul>
-</li>
+<li class="dropdown-header"> Packages</li>
 <li>
   <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
@@ -275,20 +249,9 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="media/angkor.jpg" width="1000" style="display: block; margin: auto;" /></p>
-<p>You have reached my personal webpage. If you’re looking to learn about me, you’re in the right place! Otherwise, you can visit <a href="http://existentialcomics.com/">this</a> website, mainly because it’s funny.</p>
-<p>I’m currently a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cité.</p>
-<p><em>PS: I made this website using R.</em></p>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-98191491-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+<p><img src="media/ski.jpg" width="800" style="display: block; margin: auto;" /></p>
+<p>You have reached my personal webpage. If you’re looking to learn about what I’m doing, you’re in the right place! Otherwise, you can visit <a href="http://existentialcomics.com/">this</a> website, mainly because it’s funny.</p>
+<p>I’m currently a PhD student in the <a href="http://recherche.parisdescartes.fr/LaboratoireMemoireCognition">Memory &amp; Cognition Lab’</a> at the University of Sorbonne Paris Cit</p>
 
 
 
