--- a/packages.html
+++ b/packages.html
@@ -11,7 +11,7 @@
 
 
 
-<title>R Packages</title>
+<title>Packages &amp; Tools</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -190,33 +190,7 @@ $(document).ready(function () {
      Research
   </a>
 </li>
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    <span class="fa fa-dropbox"></span>
-     
-     Packages
-     
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu" role="menu">
-    <li>
-      <a href="packages.html">Overview</a>
-    </li>
-    <li class="divider"></li>
-    <li>
-      <a href="neuropsychology.R.html">neuropsychology.R</a>
-    </li>
-    <li class="divider"></li>
-    <li>
-      <a href="Neuropsydia.py.html">Neuropsydia.py</a>
-    </li>
-    <li class="divider"></li>
-    <li>
-      <a href="NeuroKit.py.html">NeuroKit.py</a>
-    </li>
-    <li class="divider"></li>
-  </ul>
-</li>
+<li class="dropdown-header"> Packages</li>
 <li>
   <a href="courses.html">
     <span class="fa fa-graduation-cap"></span>
@@ -270,7 +244,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">R Packages</h1>
+<h1 class="title toc-ignore">Packages &amp; Tools</h1>
 
 </div>
 
